@@ -62,6 +62,10 @@ LanguageTool Change Log
 -added common punctuation and mathematical characters (=#*∗×·+÷) to the 
  set of tokenizing characters in most languages
 
+-added new element <unify-ignore/> in XML rules to mark the parts of the unified
+  sequence that are not checked (useful to ignore punctuation, connectives, or not
+  inflected words)
+
 -spell checking:
    -Immunized tokens are now ignored and don't cause a spelling error anymore;
     one can also add particular contextual expressions to ignored words by using
